--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "jley",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4"
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
+    "mongoose": "^4.5.9"
   },
   "engines": {
     "node": "0.10.25"
